<?xml version="1.0"?>
<package>
  <name>motion_arbiter</name>
  <version>0.0.0</version>
  <description>motion_arbiter package</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

  <license>BSD</license>
  <url type="website">https://github.com/byeongkyu/social_mind</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mind_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>mind_msgs</run_depend>

  <export>
  </export>
</package>
