<?xml version="1.0"?>
<package>
    <name>perception_base</name>
    <version>0.0.0</version>
    <description>Perception Base class.</description>

    <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
    <license>BSD</license>

    <url type="website">http://github.com/mhri/mhri/wiki</url>

    <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>mind_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>mind_msgs</run_depend>

    <export>
    </export>
</package>
