<?xml version="1.0"?>
<package format="2">
    <name>working_memory</name>
    <version>0.0.0</version>
    <description>Persistent storage of Social Mind</description>

    <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
    <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

    <license>BSD</license>
    <url type="repository">https://github.com/byeongkyu/social_mind</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>mongodb</depend>
    <depend>warehouse_ros</depend>
    <depend>message_generation</depend>
    <depend>mind_msgs</depend>
    <exec_depend>message_runtime</exec_depend>

    <export></export>
</package>
